--- a/src/components/Translation/Translation.css
+++ b/src/components/Translation/Translation.css
@@ -19,3 +19,14 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.btn-translation{
+    width: 150px;
+    height: 45px;
+    background-color: #30B2DC;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    font-weight: 300;
+    font-size: 13px;
+    letter-spacing: 1.5px;
+}
